--- a/style.css
+++ b/style.css
@@ -9,13 +9,12 @@ h1, h6{color:#2e456e;}
 .combo-card{
     position: relative;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.1);
-      
+    
 }
 
 .combo-description{
     position: absolute;
-    top:500px;
+    top:525px;
     left:0%;
     width: 100%;
     padding: 15px;
@@ -28,5 +27,33 @@ h1, h6{color:#2e456e;}
 }
 
 .combo-card:hover .combo-description{
-    top: 265px;
+    top: 310px;
+    opacity: 1;
 }
+
+.recpic {
+    position: relative;
+    overflow: hidden;
+}
+
+.recdesc {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    padding: 7px;
+    font-size: 12px;
+    background: rgba(0, 0, 0, 0.6); 
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    color: white;
+    opacity: 0; 
+    transition: top 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+
+.recpic:hover .recdesc {
+    top: 20px; 
+    opacity: 1; 
+}
+
